--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         class="left-abstract"
       />
       <img src="./assets/images/pl-flag.png" alt="" class="flag" />
-      <img src="./assets//images/snow-bg.png" alt="" class="snow-bg" />
+      <img src="./assets//images/snow-bg.webp" alt="" class="snow-bg" />
       <div class="container">
         <div class="main-content">
           <div class="left-main-content">
@@ -93,8 +93,8 @@
             </div>
 
             <div class="right-main-content right-main-content-mobile">
-              <img src="./assets/images/hero-mobile.png" alt="" />
-              <img src="./assets/images/hero-bg.png" alt="" class="hero-bg" />
+              <img src="./assets/images/hero-mobile.webp" alt="" />
+              <img src="./assets/images/hero-bg.webp" alt="" class="hero-bg" />
             </div>
             <button
               onclick="location.href = window.serverData.clickUrl"
@@ -133,11 +133,11 @@
             </div>
           </div>
           <div class="right-main-content right-main-content-desktop">
-            <img class="character" src="./assets/images/hero.png" alt="" />
+            <img class="character" src="./assets/images/hero.webp" alt="" />
             <div class="item-wrapper gift-2" id="scene">
               <img
                 class="characters-item"
-                src="./assets/images/gift-2.png"
+                src="./assets/images/gift-2.webp"
                 alt=""
                 data-depth="0.3"
               />
@@ -145,7 +145,7 @@
             <div class="item-wrapper toy-1" id="scene1">
               <img
                 class="characters-item"
-                src="./assets/images/toy-1.png"
+                src="./assets/images/toy-1.webp"
                 alt=""
                 data-depth="0.3"
               />
@@ -161,7 +161,7 @@
             <div class="item-wrapper gift-1" id="scene3">
               <img
                 class="characters-item"
-                src="./assets/images/gift-1.png"
+                src="./assets/images/gift-1.webp"
                 alt=""
                 data-depth="0.2"
               />
@@ -169,7 +169,7 @@
             <div class="item-wrapper toy-2" id="scene4">
               <img
                 class="characters-item"
-                src="./assets/images/toy-2.png"
+                src="./assets/images/toy-2.webp"
                 alt=""
                 data-depth="0.4"
               />
@@ -177,7 +177,7 @@
             <div class="item-wrapper toy-3" id="scene5">
               <img
                 class="characters-item"
-                src="./assets/images/toy-3.png"
+                src="./assets/images/toy-3.webp"
                 alt=""
                 data-depth="0.4"
               />
@@ -294,7 +294,7 @@
         </div>
         <div class="right-partners-content">
           <img src="./assets/images/18-plus.svg" alt="" class="verification" />
-          <img src="./assets/images/rating.svg" alt="" class="verification" />
+          <img src="./assets/images/rating.webp" alt="" class="verification" />
           <img
             src="./assets/images/antillephone.svg"
             alt=""
