--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
 
             <div class="right-main-content right-main-content-mobile">
-              <img src="./assets/images/hero-mobile.webp" alt="" />
+              <img src="./assets/images/hero-mobile.png" alt="" />
               <img src="./assets/images/hero-bg.webp" alt="" class="hero-bg" />
             </div>
             <button
